--- a/index.ipynb
+++ b/index.ipynb
@@ -142,11 +142,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting cython\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/19/8e/32b280abb0947a96cdbb8329fb2014851a21fc1d099009f946ea8a8202c3/Cython-0.28.5-cp36-cp36m-manylinux1_x86_64.whl (3.4MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 3.4MB 7.8MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: cython\n",
+      "Successfully installed cython-0.28.5\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.0 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install cython"
+    "!pip install folium"
    ]
   },
   {
