--- a/index.ipynb
+++ b/index.ipynb
@@ -142,31 +142,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: folium in /opt/conda/lib/python3.6/site-packages (0.6.0)\n",
-      "Requirement already satisfied: six in /opt/conda/lib/python3.6/site-packages (from folium) (1.11.0)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.6/site-packages (from folium) (1.14.2)\n",
-      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.6/site-packages (from folium) (2.10)\n",
-      "Requirement already satisfied: branca>=0.3.0 in /opt/conda/lib/python3.6/site-packages (from folium) (0.3.0)\n",
-      "Requirement already satisfied: requests in /opt/conda/lib/python3.6/site-packages (from folium) (2.18.4)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /opt/conda/lib/python3.6/site-packages (from jinja2->folium) (1.0)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /opt/conda/lib/python3.6/site-packages (from requests->folium) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.7,>=2.5 in /opt/conda/lib/python3.6/site-packages (from requests->folium) (2.6)\n",
-      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /opt/conda/lib/python3.6/site-packages (from requests->folium) (1.22)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.6/site-packages (from requests->folium) (2018.4.16)\n",
-      "\u001b[33mYou are using pip version 10.0.1, however version 18.0 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "\n",
+      "The following command must be run outside of the IPython shell:\n",
+      "\n",
+      "    $ pip install --upgrade pip\n",
+      "\n",
+      "The Python package manager (pip) can only be used from outside of IPython.\n",
+      "Please reissue the `pip` command in a separate terminal or command prompt.\n",
+      "\n",
+      "See the Python documentation for more information on how to install packages:\n",
+      "\n",
+      "    https://docs.python.org/3/installing/\n"
      ]
     }
    ],
    "source": [
-    "!pip install folium"
+    "ip install --upgrade pip"
    ]
   },
   {
